--- a/client/app/main/main.css
+++ b/client/app/main/main.css
@@ -1,27 +1,167 @@
-.thing-form {
-  margin: 20px 0;
+@import url(http://fonts.googleapis.com/css?family=Croissant+One);
+
+
+
+#gradient
+{
+  width: 100%;
+  min-height: 100vh;
+  padding: 0px;
+  margin: 0px;
+  background-color: dimgray;
+  box-shadow: inset 0 0 200px hsla(0,0%,0%,.4);
+
 }
 
-#banner {
-  border-bottom: none;
-  margin-top: -20px;
-}
-
-#banner h1 {
-  font-size: 60px;
-  line-height: 1;
-  letter-spacing: -1px;
-}
-
-.hero-unit {
-  position: relative;
-  padding: 30px 15px;
-  color: #F5F5F5;
+#gradient h1 {
+  position: absolute;
+  top: 40%;
+  left: 0;
+  width: 100%;
+  font-family: 'Croissant One', sans-serif;
   text-align: center;
-  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
-  background: #4393B9;
+  font-weight: 400;
+  font-size: 2.5em;
+  line-height: 1.25em;
+  color: #2d2d2d;
+}
+h1 span {
+  display: inline-block;
+  border-top: 1px solid #2d2d2d;
+  border-bottom: 1px solid #2d2d2d;
+  padding: .5em .6em;
 }
 
-.navbar-text {
-  margin-left: 15px;
+/* Have to set height explicity on ui-view
+to prevent collapsing during animation*/
+
+
+.ui-view-container {
+  position: relative;
 }
+
+#sign-up.ng-enter {
+  position: absolute;
+  top: 40%;
+  left: 0;
+  width: 100%;
+  -webkit-transition:all 2s ease-in-out;
+  -moz-transition:all .5s ease-in-out;
+  -o-transition:all .5s ease-in-out;
+  transition:all .5s ease-in-out;
+}
+
+#sign-up.ng-enter {
+  opacity: 0;
+  -webkit-transform:scale3d(0.5, 0.5, 0.5);
+  -moz-transform:scale3d(0.5, 0.5, 0.5);
+  transform:scale3d(0.5, 0.5, 0.5);
+}
+
+#sign-up.ng-enter-active{
+  opacity: 1;
+  -webkit-transform:scale3d(1, 1, 1);
+  -moz-transform:scale3d(1, 1, 1);
+  transform:scale3d(1, 1, 1);
+}
+
+#sign-up.ng-leave {
+  opacity: 1;
+  /*padding-left: 0px;*/
+  -webkit-transform:translate3d(0, 0, 0);
+  -moz-transform:translate3d(0, 0, 0);
+  transform:translate3d(0, 0, 0);
+}
+
+#sign-up.ng-leave-active {
+  opacity: 0;
+  /*padding-left: 100px;*/
+  -webkit-transform:translate3d(100px, 0, 0);
+  -moz-transform:translate3d(100px, 0, 0);
+  transform:translate3d(100px, 0, 0);
+}
+
+/* Form Module */
+.form-module {
+
+  position: absolute;
+  top:10%;
+  background: lightslategray;
+  max-width: 600px;
+  width: 70%;
+  border-top: 5px solid darkorange;
+  border-radius: 1px;
+  box-shadow: 10px 10px 3px rgba(0, 0, 0, 0.1);
+  margin: 0 auto;
+  padding: 15px;
+}
+.form-module .toggle {
+  cursor: pointer;
+  position: absolute;
+  top: -0;
+  right: -0;
+  background: darkorange;
+  width: 120px;
+  height: 30px;
+  margin: -5px 0 0;
+  color: #ffffff;
+  font-size: 12px;
+  line-height: 30px;
+  text-align: center;
+}
+.form-module .toggle .tooltip {
+  position: absolute;
+  top: 5px;
+  right: -65px;
+  display: block;
+  background: rgba(0, 0, 0, 0.6);
+  width: auto;
+  padding: 5px;
+  font-size: 10px;
+  line-height: 1;
+  text-transform: uppercase;
+}
+.form-module .toggle .tooltip:before {
+  content: '';
+  position: absolute;
+  top: 5px;
+  left: -5px;
+  display: block;
+  border-top: 5px solid transparent;
+  border-bottom: 5px solid transparent;
+  border-right: 5px solid rgba(0, 0, 0, 0.6);
+}
+.form-module .form {
+  display: none;
+  padding: 40px;
+}
+.form-module .form:nth-child(1) {
+  display: block;
+}
+.form-module h2 {
+  margin: 0 0 20px;
+  color: darkorange;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1;
+}
+
+.form-module input:focus {
+  border: 1px solid #33b5e5;
+  color: darkorange;
+}
+
+.form-module button {
+  cursor: pointer;
+  background: darkorange;
+  width: 100%;
+  border: 0;
+  padding: 10px 15px;
+  color: #ffffff;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
+}
+.form-module button:hover {
+  background: orangered;
+}
+
