--- a/client/app/chat/chat.css
+++ b/client/app/chat/chat.css
@@ -31,3 +31,11 @@
   padding:0px;
 }
 
+.title-bar{
+  background-color: dimgray;
+  box-shadow: inset 0 0 200px hsla(0,0%,0%,.4);
+  color:orangered;
+  margin:0px;
+  font-family: 'Croissant One', sans-serif;
+  text-align:center;
+}
