--- a/client/components/navbar/navbar.css
+++ b/client/components/navbar/navbar.css
@@ -4,7 +4,7 @@ h4 .md-button, h4 {
 
 div .md-button{
   float:right;
-  background-color: darkslategray;
+  //background-color: darkslategray;
 
 }
 
