--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -68,8 +68,8 @@
 </div>-->
   <md-toolbar class="navbar">
     <div layout="row">
-      <div flex="15">
-          <h2><md-button>The Cha-Chat</md-button></h2>
+      <div flex="25">
+          <h2>The Cha-Chat</h2>
       </div>
       <div flex="100" class="f-left">
         <md-button aria-label="settings" class="md-icon-button" ng-show="nav.isLoggedIn()" ui-sref-active="active" ui-sref="settings"><ng-md-icon icon="settings"></ng-md-icon>
