--- a/client/components/repeatMessages/repeatMessages.css
+++ b/client/components/repeatMessages/repeatMessages.css
@@ -1,4 +1,4 @@
-.chat-message p {
+.chat-message div {
   margin: 0 0 0.5em;
   border-radius: 1em;
   padding: 0.5em 1em;
@@ -7,11 +7,11 @@
   clear: both;
   position: relative;
 }
-.chat-message p.from {
+.chat-message div.from {
   float: left;
   margin-left:1em;
 }
-.chat-message p.from::after {
+.chat-message div.from::after {
   content: "";
   position: absolute;
   left: -0.5em;
@@ -21,13 +21,13 @@
   border-right: 0.5em solid #e5e5ea;
   border-bottom-right-radius: 1em 0.5em;
 }
-.chat-message p.me {
+.chat-message div.me {
   float: right;
   margin-right:1em;
   background-color: darkorange;
   color: white;
 }
-.chat-message p.me::after {
+.chat-message div.me::after {
   content: "";
   position: absolute;
   right: -0.5em;
@@ -37,11 +37,32 @@
   border-left: 0.5em solid darkorange;
   border-bottom-left-radius: 1em 0.5em;
 }
+.chat-message div p{
+  margin:0px;
+  font-size:.6em;
+}
 
-.chat-message{
-  margin-top:10px;
-  width:100%;
-  overflow-y: auto;
-  min-height:350px;
-  max-height:350px;
+.chat-message div.me p{
+  color: darkslategray;
+}
+.chat-message div.from p{
+ color: darkorange;
+}
+@media (max-height: 630px) {
+  .chat-message{
+    margin-top:10px;
+    width:100%;
+    overflow-y: auto;
+    min-height:60vh;
+    max-height:60vh;
+  }
+}
+@media (min-height: 630px) {
+  .chat-message {
+    margin-top: 10px;
+    width: 100%;
+    overflow-y: auto;
+    min-height: 65vh;
+    max-height: 65vh;
+  }
 }
