--- a/client/app/chat/chat.css
+++ b/client/app/chat/chat.css
@@ -20,15 +20,16 @@
 
 .title-bar{
   background-color: dimgray;
-  box-shadow: inset 0 0 200px hsla(0,0%,0%,.4);
+  box-shadow: inset 0 0 50px hsla(0,0%,0%,.4);
   color:orangered;
+  height:27px;
   margin:0px;
   font-family: 'Croissant One', sans-serif;
   text-align:center;
 }
 
 .add-person{
-  postion:absolute;
+  position:absolute;
   top:-40%;
   left:40%;
   width:300px;
@@ -64,4 +65,3 @@
   color:lavenderblush;
   cursor:pointer;
 }
-
