--- a/client/app/chat/messages/messages.css
+++ b/client/app/chat/messages/messages.css
@@ -6,11 +6,21 @@
   box-shadow: inset 0 0 200px hsla(0,0%,0%,.4);
   color:darkorange;
   text-shadow: 2px 2px #222222;
+
 }
 
 .right-title-bar> h4{
   float: right;
-  padding:15px;
+  padding:10px;
+  margin:0px;
+  clear:right;
+
+}
+
+.right-title-bar>h6{
+  clear:right;
+  float: right;
+
   margin:0px;
 }
 
@@ -21,4 +31,32 @@
   width:50px;
   height:50px;
   float:left;
+}
+
+
+.md-subheader-inner{
+  margin:0px !important;
+  padding:0px !important;
+  font-size:1.1em !important;
+}
+
+.welcome-message{
+  width:100%;
+  height:85vh;
+  background-color: dimgray;
+  box-shadow: inset 0 0 200px hsla(0,0%,0%,.4);
+  text-align:center;
+  color:darkorange;
+  font-size:3em;
+  padding:0;
+  text-shadow: 2px 2px #222222;
+  font-family: 'Croissant One', sans-serif;
+}
+
+.welcome-message p{
+  padding:.1em;
+  text-align:center;
+  position:relative;
+  top:23vh;
+
 }
