--- a/client/app/main/main.css
+++ b/client/app/main/main.css
@@ -166,11 +166,35 @@ to prevent collapsing during animation*/
 }
 
 .help-block{
+  padding:0px;
   text-align: center;
   color:orangered;
 }
 .answer-block{
+  padding:0px;
+  margin:0px;
   text-align: center;
   color:green;
 }
 
+/* Let's get this party started */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  background: darkorange;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+}
+::-webkit-scrollbar-thumb:window-inactive {
+  background: orangered;
+}
