--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -53,7 +53,7 @@
 </div>
 -->
 
-<div ng-controller="NavbarController">
+<div ng-controller="NavbarController as ctrl">
   <!--<md-toolbar>
     <div layout="row" flex="" layout-align="left" layout-wrap>
       The Chat
@@ -68,8 +68,11 @@
 </div>-->
   <md-toolbar class="navbar">
     <div layout="row">
-      <div flex="60">
+      <div flex="100">
           <h2>The Cha-Chat</h2>
+      </div>
+      <div flex="100">
+        <h2>{{ctrl.currentUser.name}}</h2>
       </div>
       <div flex="100" class="f-left">
         <md-button aria-label="settings" class="md-icon-button" ng-show="nav.isLoggedIn()" ui-sref-active="active" ui-sref="settings"><ng-md-icon icon="settings"></ng-md-icon>
