change es5 to es6

--- a/client/app/chat/contacts/contacts.css
+++ b/client/app/chat/contacts/contacts.css
@@ -19,7 +19,7 @@ md-divider {
 }
 
 .md-alert{
-  color:darkorange;
+  color:goldenrod;
 }
 
 .md-primary{
@@ -30,4 +30,8 @@ md-divider {
 }
 .user-offline{
   opacity:.5;
+}
+
+.overflow{
+  overflow-y: auto;
 }
