--- a/client/app/chat/information/information.css
+++ b/client/app/chat/information/information.css
@@ -4,6 +4,8 @@
   overflow:hidden;
   width:150px;
   height:150px;
+  position:relative;
+  display:block;
   margin:10px auto;
 }
 
@@ -35,13 +37,18 @@
   background-color: darkslategrey;
 }
 
+.information{
+}
+
 .information button ,.information input {
   cursor: pointer;
   background: darkorange;
   width: 90%;
   border: 0;
   padding: 10px 15px;
-  margin:.6em;
+  margin-left:.6em;
+  margin-bottom:.2em;
+  margin-top:.6em;
   color: white; !important
   -webkit-transition: 0.3s ease;
   transition: 0.3s ease;
@@ -63,67 +70,15 @@
 .btn-red:hover{
   background-color: darkred !important;
 }
-#accordion  {
-  height:40vh;
-  overflow: auto;
-}
-#accordion input {
-  display: none;
-}
-#accordion label {
-  background: darkslategray;
-  font-family: 'Croissant One', sans-serif;
-  color:darkorange;
-  border-radius: .25em;
-  cursor: pointer;
-  display: block;
-  margin-bottom: .125em;
-  margin-left:.5em;
-  margin-right:.5em;
-  padding: .25em 1em;
-  z-index: 20;
-}
-#accordion label:hover {
-  background: #ccc;
+
+.group-members p{
+  font-size:.7em;
 }
 
-#accordion input:checked + label {
-  background: #ccc;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
-  color: white;
-  margin-bottom: 0;
-}
-#accordion article {
-  margin-left:.5em;
-  margin-right:.5em;
-  background: grey;
-  height:0px;
-  overflow:hidden;
-  z-index:10;
-}
-#accordion article span {
+.group-members {
+  display:block;
+  margin-left:3vh;
 
-  color:darkslategray;
-  text-shadow: 1px 1px #222222;
-  font-family: 'Croissant One', sans-serif;
-  padding-left: .1em;
-}
-#accordion article p {
-
-   color:darkorange;
-   text-shadow: 1px 1px #222222;
-   font-family: 'Croissant One', sans-serif;
-   padding-left: .1em;
-  margin:0;
- }
-#accordion input:checked article {
-}
-#accordion input:checked ~ article {
-  border-bottom-left-radius: .25em;
-  border-bottom-right-radius: .25em;
-  height: auto;
-  margin-bottom: .125em;
 }
 
 .float-right{
