--- a/client/components/oauth-buttons/oauth-buttons.html
+++ b/client/components/oauth-buttons/oauth-buttons.html
@@ -1,8 +1,6 @@
 <a ng-class="classes" ng-click="OauthButtons.loginOauth('facebook')" class="btn btn-facebook">
-  <i class="fa fa-facebook"></i>
-  Connect with Facebook
+  <ng-md-icon icon="facebook"></ng-md-icon>
 </a>
 <a ng-class="classes" ng-click="OauthButtons.loginOauth('twitter')" class="btn btn-twitter">
-  <i class="fa fa-twitter"></i>
-  Connect with Twitter
+  <ng-md-icon icon="twitter"></ng-md-icon>
 </a>
