--- a/client/app/main/main.css
+++ b/client/app/main/main.css
@@ -40,47 +40,6 @@ to prevent collapsing during animation*/
   position: relative;
 }
 
-#sign-up.ng-enter {
-  position: absolute;
-  top: 40%;
-  left: 0;
-  width: 100%;
-  -webkit-transition:all 2s ease-in-out;
-  -moz-transition:all .5s ease-in-out;
-  -o-transition:all .5s ease-in-out;
-  transition:all .5s ease-in-out;
-}
-
-#sign-up.ng-enter {
-  opacity: 0;
-  -webkit-transform:scale3d(0.5, 0.5, 0.5);
-  -moz-transform:scale3d(0.5, 0.5, 0.5);
-  transform:scale3d(0.5, 0.5, 0.5);
-}
-
-#sign-up.ng-enter-active{
-  opacity: 1;
-  -webkit-transform:scale3d(1, 1, 1);
-  -moz-transform:scale3d(1, 1, 1);
-  transform:scale3d(1, 1, 1);
-}
-
-#sign-up.ng-leave {
-  opacity: 1;
-  /*padding-left: 0px;*/
-  -webkit-transform:translate3d(0, 0, 0);
-  -moz-transform:translate3d(0, 0, 0);
-  transform:translate3d(0, 0, 0);
-}
-
-#sign-up.ng-leave-active {
-  opacity: 0;
-  /*padding-left: 100px;*/
-  -webkit-transform:translate3d(100px, 0, 0);
-  -moz-transform:translate3d(100px, 0, 0);
-  transform:translate3d(100px, 0, 0);
-}
-
 /* Form Module */
 .form-module {
 
@@ -205,3 +164,13 @@ to prevent collapsing during animation*/
 
 }
 
+.btn-toggler{
+ color:white;
+}
+
+.btn-toggler:active{
+  color:white;
+}
+.btn-toggler:hover{
+  color:darkslategray;
+}
