--- a/client/components/navbar/navbar.css
+++ b/client/components/navbar/navbar.css
@@ -2,10 +2,10 @@ h4 .md-button, h4 {
   padding:0px;
 }
 
-div .md-button{
-  float:right;
-  margin:0px;
-}
+/*div .md-button{*/
+  /*float:right;*/
+  /*margin:0px;*/
+/*}*/
 
 .navbar {
   font-family: 'Croissant One', sans-serif;
