--- a/client/app/chat/chat.css
+++ b/client/app/chat/chat.css
@@ -1,67 +1,67 @@
-#chatViewPort{
-  height:90vh;
-  overflow-x: hidden;
-}
+/*#chatViewPort{*/
+  /*height:90vh;*/
+  /*overflow-x: hidden;*/
+/*}*/
 
-.input input{
- //border: 2px solid red;
-   min-height:50px;
-   width:70%;
-    margin:0px;
-  padding:0px;
- }
-.input .md-button{
-//border: 2px solid red;
-  min-height:50px;
-  width:16%;
-  margin-right:2%;
-  padding:0px;
-}
+/*.input input{*/
+ /*//border: 2px solid red;*/
+   /*min-height:50px;*/
+   /*width:70%;*/
+    /*margin:0px;*/
+  /*padding:0px;*/
+ /*}*/
+/*.input .md-button{*/
+/*//border: 2px solid red;*/
+  /*min-height:50px;*/
+  /*width:16%;*/
+  /*margin-right:2%;*/
+  /*padding:0px;*/
+/*}*/
 
-.title-bar{
-  background-color: dimgray;
-  box-shadow: inset 0 0 50px hsla(0,0%,0%,.4);
-  color:orangered;
-  height:27px;
-  margin:0px;
-  font-family: 'Croissant One', sans-serif;
-  text-align:center;
-}
+/*.title-bar{*/
+  /*background-color: dimgray;*/
+  /*box-shadow: inset 0 0 50px hsla(0,0%,0%,.4);*/
+  /*color:orangered;*/
+  /*height:27px;*/
+  /*margin:0px;*/
+  /*font-family: 'Croissant One', sans-serif;*/
+  /*text-align:center;*/
+/*}*/
 
-.add-person{
-  position:absolute;
-  top:-40%;
-  left:40%;
-  width:300px;
-  height:250px;
+/*.add-person{*/
+  /*position:absolute;*/
+  /*top:-40%;*/
+  /*left:40%;*/
+  /*width:300px;*/
+  /*height:250px;*/
 
-}
-.md-sidenav-left{
-  width:16em;
-}
-.md-sidenav-right{
-  width:15em;
-}
+/*}*/
+/*.md-sidenav-left{*/
+  /*width:16em;*/
+/*}*/
+/*.md-sidenav-right{*/
+  /*width:15em;*/
+/*}*/
 
-.floater-right{
-  float:right;
-  padding-right:5px;
-}
-
-
-.floater-right:hover{
-  color:lavenderblush;
-  cursor:pointer;
-}
+/*.floater-right{*/
+  /*float:right;*/
+  /*padding-right:5px;*/
+/*}*/
 
 
-.floater-left{
-  float:left;
-  padding-right:5px;
-}
+/*.floater-right:hover{*/
+  /*color:lavenderblush;*/
+  /*cursor:pointer;*/
+/*}*/
 
 
-.floater-left:hover{
-  color:lavenderblush;
-  cursor:pointer;
-}
+/*.floater-left{*/
+  /*float:left;*/
+  /*padding-right:5px;*/
+/*}*/
+
+
+/*.floater-left:hover{*/
+  /*color:lavenderblush;*/
+  /*cursor:pointer;*/
+/*}*/
