--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -66,7 +66,7 @@
     </div>
   </md-toolbar>
 </div>-->
-  <md-toolbar  >
+  <md-toolbar  md-whiteframe="6">
     <div layout="row" layout-align="center center">
       <div>
         The Cha-Chat
