--- a/client/components/dashboard/dashboard.html
+++ b/client/components/dashboard/dashboard.html
@@ -1,27 +1,14 @@
 
-<md-content class="md-padding" flex layout-xs="column" layout="row">
+<md-content class="md-padding" flex  layout-gt-md="row" layout="column">
   <div flex >
     <md-card >
-      <md-card-title>
-        <md-card-title-text>
-          <span class="md-headline">Add a new Friend</span>
-          <span class="md-subhead">Large</span>
-        </md-card-title-text>
-        <md-card-title-media>
-          <div class="md-media-lg card-media"></div>
-        </md-card-title-media>
-      </md-card-title>
+      <md-toolbar layout="row" class="md-accent" layout-align="center center">Add a new Friend</md-toolbar>
       <md-card-actions layout="row" layout-align="end center">
         <md-button>Action 2</md-button>
       </md-card-actions>
     </md-card>
     <md-card flex layout="column">
-      <md-card-title>
-        <md-card-title-text>
-          <span class="md-headline">Create a group</span>
-          <span class="md-subhead">Extra Large</span>
-        </md-card-title-text>
-      </md-card-title>
+      <md-toolbar layout="row" class="md-accent" layout-align="center center">Create A group</md-toolbar>
       <md-card-content layout="row" flex>
         <md-content   class="md-media-xl card-media" flex  layout="column"  ui-view="addGroup">
 
@@ -40,31 +27,15 @@
       </md-card-content>
     </md-card>
   </div>
-  <div flex-xs flex-gt-xs="50" layout="column">
+  <div flex layout="column">
     <md-card >
-      <md-card-title>
-        <md-card-title-text>
-          <span class="md-headline">Open a conversation</span>
-          <span class="md-subhead">Small</span>
-        </md-card-title-text>
-        <md-card-title-media>
-          <div class="md-media-sm card-media"></div>
-        </md-card-title-media>
-      </md-card-title>
+      <md-toolbar layout="row" class="md-accent" layout-align="center center">Open a Conversation</md-toolbar>
       <md-card-actions layout="row" layout-align="end center">
         <md-button>Action 1</md-button>
       </md-card-actions>
     </md-card>
     <md-card>
-      <md-card-title>
-        <md-card-title-text>
-          <span class="md-headline">Settings</span>
-          <span class="md-subhead">Medium</span>
-        </md-card-title-text>
-        <md-card-title-media>
-          <div class="md-media-md card-media"></div>
-        </md-card-title-media>
-      </md-card-title>
+      <md-toolbar layout="row" class="md-accent" layout-align="center center">Settings</md-toolbar>
       <md-card-actions layout="row" layout-align="end center">
         <md-button>Action 1</md-button>
       </md-card-actions>
