add theme to all chat components

--- a/client/app/chat/addUser/addUser.css
+++ b/client/app/chat/addUser/addUser.css
@@ -1,30 +1,30 @@
-.search-icon{
-  padding:.1em;
-  margin:0px;
-  color:dimgray;
-  float:left;
-  clear:none;
-  background-color:white;
-  border:0
-}
-.search-icon:hover{
- color:orangered;
-}
+/*.search-icon{*/
+  /*padding:.1em;*/
+  /*margin:0px;*/
+  /*color:dimgray;*/
+  /*float:left;*/
+  /*clear:none;*/
+  /*background-color:white;*/
+  /*border:0*/
+/*}*/
+/*.search-icon:hover{*/
+ /*color:orangered;*/
+/*}*/
 
 
-.search-input{
-  height:7.8em;
-}
+/*.search-input{*/
+  /*height:7.8em;*/
+/*}*/
 
-#search-box{
-  margin-top:1em;
-  margin-bottom:1em;
-  padding-left:.6em;
-}
-.outer-info p {
-  color:darkorange;
-  font-size:.8em;
-  text-shadow: 1px 1px #222222;
-  font-family: 'Croissant One', sans-serif;
-}
+/*#search-box{*/
+  /*margin-top:1em;*/
+  /*margin-bottom:1em;*/
+  /*padding-left:.6em;*/
+/*}*/
+/*.outer-info p {*/
+  /*color:darkorange;*/
+  /*font-size:.8em;*/
+  /*text-shadow: 1px 1px #222222;*/
+  /*font-family: 'Croissant One', sans-serif;*/
+/*}*/
 
