--- a/client/components/loadDrawing/loadDrawing.html
+++ b/client/components/loadDrawing/loadDrawing.html
@@ -1,1 +1,1 @@
-<canvas class="floater-left" width="800" height="200" id="canvas" ctx-draw="imageObj"></canvas>
+<canvas  width="800" height="200" id="canvas" ctx-draw="imageObj"></canvas>
