--- a/client/app/chat/messages/messages.css
+++ b/client/app/chat/messages/messages.css
@@ -1,28 +1,28 @@
-.title-user{
-  background-color: lightslategray;
-  margin:0px;
-  padding:10px;
-  height:50px;
-  box-shadow: inset 0 0 200px hsla(0,0%,0%,.4);
-  color:darkorange;
-  text-shadow: 2px 2px #222222;
+/*.title-user{*/
+  /*background-color: lightslategray;*/
+  /*margin:0px;*/
+  /*padding:10px;*/
+  /*height:50px;*/
+  /*box-shadow: inset 0 0 200px hsla(0,0%,0%,.4);*/
+  /*color:darkorange;*/
+  /*text-shadow: 2px 2px #222222;*/
 
-}
+/*}*/
 
-.right-title-bar> h4{
-  float: right;
-  padding:10px;
-  margin:0px;
-  clear:right;
+/*.right-title-bar> h4{*/
+  /*float: right;*/
+  /*padding:10px;*/
+  /*margin:0px;*/
+  /*clear:right;*/
 
-}
+/*}*/
 
-.right-title-bar>h6{
-  clear:right;
-  float: right;
+/*.right-title-bar>h6{*/
+  /*clear:right;*/
+  /*float: right;*/
 
-  margin:0px;
-}
+  /*margin:0px;*/
+/*}*/
 
 .user-photo-message {
   border:1px solid darkorange;
@@ -33,45 +33,61 @@
   float:left;
 }
 
+/*.messages{*/
+  /*background-image: url('/assets/images/config.jpg') !important;*/
+  /*!*position: absolute;*!*/
+  /*!*top: 0;*!*/
+  /*!*left: 0;*!*/
+  /*!*height: 100%;*!*/
+  /*!*width: 100%;*!*/
+  /*!*opacity: .06;*!*/
+  /*background-size:cover ;*/
+  /*background-repeat: repeat repeat;*/
+/*}*/
 
-.md-subheader-inner{
-  margin:0px !important;
-  padding:0px !important;
-  font-size:1.1em !important;
-}
 
-.welcome-message{
-  width:100%;
-  background-color: dimgray;
-  box-shadow: inset 0 0 200px hsla(0,0%,0%,.4);
-  text-align:center;
-  color:darkorange;
-  font-size:3em;
-  padding:0;
-  text-shadow: 2px 2px #222222;
-  font-family: 'Croissant One', sans-serif;
-}
+/*.md-subheader-inner{*/
+  /*margin:0px !important;*/
+  /*padding:0px !important;*/
+  /*font-size:1.1em !important;*/
+/*}*/
 
-.welcome-message div{
-  display:table;
-  height:82vh;
-  width:100%;
-}
-.welcome-message p{
-  padding:.1em;
-  text-align:center;
-  display: table-cell;
-  vertical-align:middle;
-  horiz-align:center;
-}
+/*.welcome-message{*/
+  /*width:100%;*/
+  /*background-color: dimgray;*/
+  /*box-shadow: inset 0 0 200px hsla(0,0%,0%,.4);*/
+  /*text-align:center;*/
+  /*color:darkorange;*/
+  /*font-size:3em;*/
+  /*padding:0;*/
+  /*text-shadow: 2px 2px #222222;*/
+  /*font-family: 'Croissant One', sans-serif;*/
+/*}*/
 
-.icon-bar{
-  margin:0;
- margin:.2em;
-  text-align:center;
+/*.welcome-message div{*/
+  /*display:table;*/
+  /*height:82vh;*/
+  /*width:100%;*/
+/*}*/
+/*.welcome-message p{*/
+  /*padding:.1em;*/
+  /*text-align:center;*/
+  /*display: table-cell;*/
+  /*vertical-align:middle;*/
+  /*horiz-align:center;*/
+/*}*/
 
-}
+/*.icon-bar{*/
+  /*margin:0;*/
+ /*margin:.2em;*/
+  /*text-align:center;*/
 
-md-divider{
-  margin-bottom: 0;
+/*}*/
+
+/*md-divider{*/
+  /*margin-bottom: 0;*/
+/*}*/
+
+.alert{
+  color:goldenrod !important;
 }
