--- a/client/components/dashboard/dashboard.html
+++ b/client/components/dashboard/dashboard.html
@@ -1,44 +1,81 @@
+<div layout="column">
+  <md-card >
+    <md-toolbar layout="row"  layout-align="center center">
+      <h3>Welcome to the cha-chat ...</h3>
+    </md-toolbar>
+    <md-content class="md-padding" flex  layout-gt-md="row" layout="column">
+      <div flex >
+        <md-card >
+          <md-toolbar layout="row" class="md-accent" layout-align="center center">
+            <span layout-margin="3px"></span>
 
-<md-content class="md-padding" flex  layout-gt-md="row" layout="column">
-  <div flex >
-    <md-card >
-      <md-toolbar layout="row" class="md-accent" layout-align="center center">Add a new Friend</md-toolbar>
-      <md-card-actions layout="row" layout-align="end center">
-        <md-button>Action 2</md-button>
-      </md-card-actions>
-    </md-card>
-    <md-card flex layout="column">
-      <md-toolbar layout="row" class="md-accent" layout-align="center center">Create A group</md-toolbar>
-      <md-card-content layout="row" flex>
-        <md-content   class="md-media-xl card-media" flex  layout="column"  ui-view="addGroup">
+            <md-icon aria-label="person_add">person_add</md-icon>
+            <p flex layout="row" layout-align="center">
+              Add a new Friend
+            </p>
+          </md-toolbar>
+          <md-card-content layout="row" flex>
+            <md-content    flex  layout="column"  ui-view="addContact">
+            </md-content>
+          </md-card-content>
+        </md-card>
+        <md-card flex layout="column">
+          <md-toolbar layout="row" class="md-accent" layout-align="center center">
+            <span layout-margin="3px"></span>
+            <md-icon aria-label="group_add">group_add</md-icon>
+            <p flex layout="row" layout-align="center">
+              Create a group
+            </p>
+          </md-toolbar>
+          <md-card-content layout="row" flex>
+            <md-content    flex  layout="column"  ui-view="addGroup">
+            </md-content>
+          </md-card-content>
+        </md-card>
+      </div>
+      <div flex layout="column">
+        <md-card hide show-xs>
+          <md-toolbar layout="row" class="md-accent" layout-align="center center" >
+            <span layout-margin="3px"></span>
+            <md-icon aria-label="open conversation">contacts</md-icon>
+            <p flex layout="row" layout-align="center">
+              Open a new conversation
+            </p>
+          </md-toolbar>
+          <md-card-actions layout="row" layout-align="end center">
+            <md-button ng-click="openContact()">Open Contacts</md-button>
+          </md-card-actions>
+        </md-card>
+        <md-card>
+          <md-toolbar layout="row" class="md-accent" layout-align="center center">
+            <span layout-margin="3px"></span>
+            <md-icon aria-label="request" class="md-primary">watch_later</md-icon>
+            <p flex layout="row" layout-align="center">
+              Request from Friend
+            </p>
+          </md-toolbar>
+          <md-card-content layout="row" flex>
+            <md-content    flex  layout="column"  ui-view="request">
+            </md-content>
+          </md-card-content>
+        </md-card>
+        <md-card>
+          <md-toolbar layout="row" class="md-accent" layout-align="center center">
+            <span layout-margin="3px"></span>
+            <md-icon aria-label="pending" class="md-primary">schedule</md-icon>
+            <p flex layout="row" layout-align="center">
+              Request to Friend
+            </p>
+          </md-toolbar>
+          <md-card-content layout="row" flex>
+            <md-content    flex  layout="column"  ui-view="pending">
+            </md-content>
+          </md-card-content>
+        </md-card>
+      </div>
+    </md-content>
 
-        </md-content>
-        <!--<md-card-actions layout="column">-->
-          <!--<md-button class="md-icon-button" aria-label="Favorite">-->
-            <!--<md-icon md-svg-icon="img/icons/favorite.svg"></md-icon>-->
-          <!--</md-button>-->
-          <!--<md-button class="md-icon-button" aria-label="Settings">-->
-            <!--<md-icon md-svg-icon="img/icons/menu.svg"></md-icon>-->
-          <!--</md-button>-->
-          <!--<md-button class="md-icon-button" aria-label="Share">-->
-            <!--<md-icon md-svg-icon="img/icons/share-arrow.svg"></md-icon>-->
-          <!--</md-button>-->
-        <!--</md-card-actions>-->
-      </md-card-content>
-    </md-card>
-  </div>
-  <div flex layout="column">
-    <md-card >
-      <md-toolbar layout="row" class="md-accent" layout-align="center center">Open a Conversation</md-toolbar>
-      <md-card-actions layout="row" layout-align="end center">
-        <md-button>Action 1</md-button>
-      </md-card-actions>
-    </md-card>
-    <md-card>
-      <md-toolbar layout="row" class="md-accent" layout-align="center center">Settings</md-toolbar>
-      <md-card-actions layout="row" layout-align="end center">
-        <md-button>Action 1</md-button>
-      </md-card-actions>
-    </md-card>
-  </div>
-</md-content>
+
+  </md-card>
+
+</div>
